package br.com.gustavoantunes.jiujitsudiary.domain;

public enum BeltRank {
    WHITE, BLUE, PURPLE, BROWN, BLACK, RED
}