package br.com.gustavoantunes.jiujitsudiary.domain;

public enum TrainingType {
    DRILLING, TECHNIQUE, SPARRING
}