package br.com.gustavoantunes.jiujitsudiary.domain.model.user;

public enum Grade {
    ONE, TWO, THREE, FOUR, FIVE, SIX, SEVEN, EIGHT
}
