package br.com.gustavoantunes.jiujitsudiary.domain.model.user;

public enum UserType {
    ADMIN, ATHLETE, TEACHER
}
